--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JS_Arrays</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
+   
 </head>
 <body>
+<div id="dino">Dinosaurs are a myth, Especially the </div>
+    Tuesday March 5th, 2019
     <script src="main.js"></script>  
 </body>
 </html>
