--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="dino">Dinosaurs are a myth, Especially the </div>
     Tuesday March 5th, 2019
+    <div id="classwork">Classes Work!</div>
     <script src="main.js"></script>  
 </body>
 </html>
